--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Apontamento",
-    "slug": "Apontamento",
+    "name": "2024-3i-RevisaoFirebase",
+    "slug": "2024-3i-RevisaoFirebase",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
